[e] Append to package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "homepage": "https://github.com/lukeoguro/210_fundamentals_of_javascript#readme",
   "dependencies": {
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.12.1",
+    "eslint-cli": "^1.1.1"
   }
 }
